# movie-booking-be

./: #compose.yaml#  .env  .env.example  .gitignore  Dockerfile  Dockerfile~  README.md  compose.yaml  compose.yaml~  entrypoint.sh  entrypoint.sh~  pyproject.toml  wsgi.py
migrations/: env.py
migrations/versions/: 0727ffe26dbd_add_promotions_table.py  0b20adb55cde_edit_alembic_env_py.py  2255337d3857_init_schema_fixed_zip.py  2894842e7407_add_showtimes_table.py  480f1a9532ed_add_billing_info_table.py  480f1a9532ed_update_users_schema_add_billinginfo_.py  50d6ae560722_add_num_rows_and_cols_to_auditorium.py  80d1be6670b6_fix_add_seathold_and_ticket_constraints.py  8b8dd892822e_add_promotions_table.py  8c288dedde53_init_schema.py  9ab1c2d4e6f0_add_password_reset_tokens.py  c1d2e3f4a5b6_add_billing_info_table.py  d6bd0a29d0f6_add_movies_table.py  dbdbcfbf5c02_the_rest.py  e5f6g7h8i9j0_increase_card_fields_for_encryption.py  ff939d6418da_add_email_verification.py  final_merge_heads.py
scripts/: movies.csv  seed_movies.py
src/app/: __init__.py  config.py  movies.json  postMovies.py
src/app/controllers/: admin_controller.py  auditorium_controller.py  auth_controller.py  booking_controller.py  movie_controller.py  promotions_controller  promotions_controller.py  showtime_controller.py  user_controller.py
src/app/jobs/: delete_old_users.py  showtimes_jobs.py
src/app/middleware/: auth.py  validate_params.py  validate_query.py  validate_request.py
src/app/models/: __init__.py  auditorium.py  billing_info.py  bookings.py  category.py  jwt_blacklist.py  movie.py  (+11 more)
(+13 files in other folders)
